WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81684
REGRESSION (
r111229
): css1/basic/inheritance.html is failing
https://bugs.webkit.org/show_bug.cgi?id=81684
Summary
REGRESSION (r111229): css1/basic/inheritance.html is failing
mitz
Reported
2012-03-20 11:15:28 PDT
In the table, text that should be green is instead black.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-03-20 11:16:21 PDT
<
rdar://problem/11082974
>
mitz
Comment 2
2012-03-20 11:23:39 PDT
Caused by <
http://trac.webkit.org/r111229
>.
mitz
Comment 3
2012-03-20 11:38:23 PDT
Reverted
r111229
in <
http://trac.webkit.org/r111419
>.
Ryosuke Niwa
Comment 4
2012-03-20 12:18:56 PDT
This revert broke builds:
http://build.webkit.org/builders/SnowLeopard%20Intel%20Debug%20%28Build%29/builds/7611/steps/compile-webkit/logs/stdio
mitz
Comment 5
2012-03-20 12:58:05 PDT
Fixed the build in
r111422
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug