REGRESSION (r111229): css1/basic/inheritance.html is failing https://bugs.webkit.org/show_bug.cgi?id=81684

Reverted r111229.

Rubber-stamped by Dave Hyatt.

Source/WebCore:

* dom/Document.cpp:
(WebCore::Document::webkitGetFlowByName):
* dom/Document.h:
(Document):
* dom/Element.cpp:
(WebCore::Element::detach):
* dom/NodeRenderingContext.cpp:
(WebCore::NodeRenderingContext::moveToFlowThreadIfNeeded):
* dom/WebKitNamedFlow.cpp:
(WebCore):
* dom/WebKitNamedFlow.h:
(WebCore):
(WebKitNamedFlow):
* dom/WebKitNamedFlow.idl:

LayoutTests:

* fast/regions/webkit-named-flow-content-nodes-expected.txt: Removed.
* fast/regions/webkit-named-flow-content-nodes.html: Removed.



Canonical link: https://commits.webkit.org/98938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111419 268f45cc-cd09-0410-ab3c-d52691b4dbfc