Source/WebCore/dom/Element.cpp
@@ -66,9 +66,8 @@
 #include "ShadowRoot.h"
 #include "Text.h"
 #include "TextIterator.h"
-#include "WebKitAnimationList.h"
 #include "WebKitMutationObserver.h"
-#include "WebKitNamedFlow.h"
+#include "WebKitAnimationList.h"
 #include "XMLNSNames.h"
 #include "XMLNames.h"
 #include "htmlediting.h"
@@ -979,15 +978,6 @@ void Element::attach()
 void Element::detach()
 {
     RenderWidget::suspendWidgetHierarchyUpdates();
-
-    if (document()->cssRegionsEnabled()) {
-        RenderStyle* style = renderer() ? renderer()->style() : computedStyle();
-        if (style && !style->flowThread().isEmpty()) {
-            RefPtr<WebKitNamedFlow> namedFlow = document()->webkitGetFlowByName(style->flowThread(), Document::DoNotCheckFlowNameForInvalidValues);
-            if (namedFlow)
-                namedFlow->unregisterContentNode(this);
-        }
-    }
 
     cancelFocusAppearanceUpdate();
     if (hasRareData())
